--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  display: flex;
+  /*display: flex;
   flex-direction: row;
   border-radius: 10%;
   background-color: #61dafb;
@@ -10,7 +10,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 10px;*/
   
 }
 
@@ -40,14 +40,10 @@
   color: #61dafb;
 }
 
-.question-section {
-  
-}
-
-.answer-section {
+/*.answer-section {
   display: flex;
   flex-direction: column;
-}
+}*/
 
 @keyframes App-logo-spin {
   from {
